ignore generated version headers

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
-nbproject/private
-nbproject/Package-*.bash
-nbproject/Makefile-*.mk
-package/
-dist/
-build/
 .dep.inc
-
+DsscAsicProcessor/src/version.hh
+DsscControl_Test/src/version.hh
+DsscDataReceiver/src/version.hh
+DsscDummyTrainGenerator/src/version.hh
+DsscLadderParameterTrimming/src/version.hh
+DsscPpt/src/version.hh
+DsscProcessor/src/version.hh
+build/
+dist/
+nbproject/Makefile-Release.mk
+nbproject/Makefile-impl.mk
+nbproject/Makefile-variables.mk
+nbproject/private/
