--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,11 @@ src/version.hh
 
 # Exception for .install.sh
 !.install.sh
+
+# Python files
+dist/
+build/
+src/DsscControl.egg-info/
+src/DsscControl/__pycache__/
+src/tests/python/__pycache__/
+_version.py
