--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 .test_build_template: &test_build
   script:
+    - echo "Setting Up Karabo"
     - export REL_OS_NAME=$(lsb_release -is)
     - export REL_OS_VERS_LONG=$(lsb_release -rs | sed -r "s/^([0-9]+).*/\1/")
     - export BUILD_TYPE=Debug
@@ -7,6 +8,8 @@
     - curl http://exflserv05.desy.de/karabo/karaboFramework/tags/$KARABO_TAG/karabo-$KARABO_TAG-Release-$REL_OS_NAME-$REL_OS_VERS_LONG-x86_64.sh > karabo.sh
     - bash karabo.sh --prefix=/root
     - source /root/karabo/activate
+
+    - echo "Testing C++ Project"
     - pushd $CI_PROJECT_DIR
     - export GTEST_OUTPUT=xml:$CI_PROJECT_DIR/report.xml
     - >  # Install Dependencies
@@ -21,6 +24,15 @@
          done < DEPENDS        
 
     - make test
+
+    - echo "Testing Python Project"
+    - pip install -e . 
+    - pytest -vv .
+    # run a device server to test for syntax errors
+    - karabo-middlelayerserver serverId=test > test.log &
+    - sleep 15
+    - if [[ $(grep -e SyntaxError -e ImportError test.log) ]]; then exit 1; else exit 0; fi
+
   artifacts:
     when: always
     reports:
