Update CI to run on all supported platforms

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,19 @@
 .test_build_template: &test_build
+  image: europeanxfel/karabo-ci:$ARCH_TAG
   script:
-    - echo "Setting Up Karabo"
-    - export REL_OS_NAME=$(lsb_release -is)
-    - export REL_OS_VERS_LONG=$(lsb_release -rs | sed -r "s/^([0-9]+).*/\1/")
+    - . /etc/os-release
+    - export REL_OS_NAME=${NAME%% *}
+    - export REL_OS_VERS_LONG=${VERSION_ID%%.*}
     - export BUILD_TYPE=Debug
     - export KARABO_BROKER_TOPIC="gitlab_ci_$CI_JOB_ID"
-    - curl http://exflserv05.desy.de/karabo/karaboFramework/tags/$KARABO_TAG/karabo-$KARABO_TAG-Release-$REL_OS_NAME-$REL_OS_VERS_LONG-x86_64.sh > karabo.sh
+    - >
+      if test "$REL_OS_NAME-$REL_OS_VERS_LONG" == "CentOS-7"; then
+          source /opt/rh/devtoolset-7/enable
+      fi;
+    - curl http://exflctrl01.desy.de/karabo/karaboFramework/tags/$KARABO_TAG/karabo-$KARABO_TAG-Release-$REL_OS_NAME-$REL_OS_VERS_LONG-x86_64.sh > karabo.sh
     - bash karabo.sh --prefix=/root
     - source /root/karabo/activate
-    - source /opt/rh/devtoolset-7/enable
+    - pushd $CI_PROJECT_DIR
     - >
          echo "Installing Dependencies";
          while read line; do
@@ -22,7 +27,6 @@
          done < DEPENDS        
 
     - echo "Testing C++ Project"
-    - pushd $CI_PROJECT_DIR
     - export GTEST_OUTPUT=xml:$CI_PROJECT_DIR/cpp.xml
     - make test
 
@@ -43,8 +47,9 @@
   interruptible: true
 
 ##### Test build #####
-test:ubuntu22:
-  image: europeanxfel/karabo-ci:centos-7-004
-  before_script:
-    - export KARABO_TAG="latest_prerelease_build"
+installation:
   <<: *test_build
+  parallel:
+    matrix:
+      - ARCH_TAG:   ["ubuntu-22-003", "almalinux-8-004", "almalinux-9-005", "centos-7-004"]
+        KARABO_TAG: ["2.17.1", "latest_prerelease_build"]
