[CI] Update target Karabo and hosts

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,14 +6,10 @@
     - export REL_OS_VERS_LONG=${VERSION_ID%%.*}
     - export BUILD_TYPE=Debug
     - export KARABO_BROKER_TOPIC="gitlab_ci_$CI_JOB_ID"
-    - export KARABO_BROKER="amqp://xfel:karabo@exfl-broker-1:5672"
-    - >
-      if test "$REL_OS_NAME-$REL_OS_VERS_LONG" == "CentOS-7"; then
-          source /opt/rh/devtoolset-7/enable
-      fi;
     - curl http://exflctrl01.desy.de/karabo/karaboFramework/tags/$KARABO_TAG/karabo-$KARABO_TAG-Release-$REL_OS_NAME-$REL_OS_VERS_LONG-x86_64.sh > karabo.sh
     - bash karabo.sh --prefix=/root
     - source /root/karabo/activate
+    - export KARABO_BROKER="amqp://xfel:karabo@exfl-broker-1:5672"
     - pushd $CI_PROJECT_DIR
     - >
          echo "Installing Dependencies";
@@ -52,5 +48,5 @@ installation:
   <<: *test_build
   parallel:
     matrix:
-      - ARCH_TAG:   ["ubuntu-22-003", "almalinux-9-005", "centos-7-004"]
-        KARABO_TAG: ["2.19.4", "2.20.0a9"]
+      - ARCH_TAG: ["almalinux-9-009", "redhat-9-004"]
+        KARABO_TAG: ["2.19.4", "2.20.4"]
