--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,13 @@
     - export REL_OS_NAME=${NAME%% *}
     - export REL_OS_VERS_LONG=${VERSION_ID%%.*}
     - export BUILD_TYPE=Debug
+    - >
+      if test "$REL_OS_NAME" == "Red"; then
+        REL_OS_NAME=RedHat
+      fi;
+    - yum install gsl-devel --assumeyes
     - export KARABO_BROKER_TOPIC="gitlab_ci_$CI_JOB_ID"
+    - echo http://exflctrl01.desy.de/karabo/karaboFramework/tags/$KARABO_TAG/karabo-$KARABO_TAG-Release-$REL_OS_NAME-$REL_OS_VERS_LONG-x86_64.sh
     - curl http://exflctrl01.desy.de/karabo/karaboFramework/tags/$KARABO_TAG/karabo-$KARABO_TAG-Release-$REL_OS_NAME-$REL_OS_VERS_LONG-x86_64.sh > karabo.sh
     - bash karabo.sh --prefix=/root
     - source /root/karabo/activate
@@ -48,5 +54,5 @@ installation:
   <<: *test_build
   parallel:
     matrix:
-      - ARCH_TAG: ["almalinux-9-009", "redhat-9-004"]
-        KARABO_TAG: ["2.19.4", "2.20.4"]
+      - ARCH_TAG: ["almalinux-9-009"]
+        KARABO_TAG: ["2.20.4", "latest_prerelease_build"]
