--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,10 @@
       if test "$REL_OS_NAME" == "Red"; then
         REL_OS_NAME=RedHat
       fi;
-    - yum install gsl-devel --assumeyes
+    - >
+      if [ "$ID" = "rhel" ] || [ "$ID" = "almalinux" ]; then
+         yum install gsl-devel --assumeyes
+      fi;
     - export KARABO_BROKER_TOPIC="gitlab_ci_$CI_JOB_ID"
     - echo http://exflctrl01.desy.de/karabo/karaboFramework/tags/$KARABO_TAG/karabo-$KARABO_TAG-Release-$REL_OS_NAME-$REL_OS_VERS_LONG-x86_64.sh
     - curl http://exflctrl01.desy.de/karabo/karaboFramework/tags/$KARABO_TAG/karabo-$KARABO_TAG-Release-$REL_OS_NAME-$REL_OS_VERS_LONG-x86_64.sh > karabo.sh
@@ -54,5 +57,5 @@ installation:
   <<: *test_build
   parallel:
     matrix:
-      - ARCH_TAG: ["almalinux-9-009"]
+      - ARCH_TAG: ["ubuntu-22-003", "almalinux-9-009"]
         KARABO_TAG: ["2.20.4", "latest_prerelease_build"]
