--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,4 +58,4 @@ installation:
   parallel:
     matrix:
       - ARCH_TAG: ["ubuntu-22-003", "almalinux-9-009"]
-        KARABO_TAG: ["2.20.4", "latest_prerelease_build"]
+        KARABO_TAG: ["2.20.4"]
