--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ where = ["src"]
 DsscControl = "DsscControl.dssc_control:DsscControl"
 DsscASICreset = "DsscControl.DsscASICreset:DsscASICreset"
 DsscConfigurator = "DsscControl.configurator:DsscConfigurator"
+DsscStateCombiner = "DsscControl.state_combiner:DsscStateCombiner"
 
 [project.entry-points."karabo.bound_device"]
 DsscSIB = "DsscControl.sib:DsscSIB"
