--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,5 +57,5 @@ installation:
   <<: *test_build
   parallel:
     matrix:
-      - ARCH_TAG: ["ubuntu-22-003", "almalinux-9-009"]
-        KARABO_TAG: ["2.20.4"]
+      - ARCH_TAG: ["almalinux-9-009"]
+        KARABO_TAG: ["latest_build"]
